backup/frontend-service/templates/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: frontend-service
  labels:
    istio-injection: enabled
